# zijwerkenvooru

./: .gitignore  Cargo.toml  README.md  SECURITY.md  justfile
.github/workflows/: scrape-and-build.yml
newsletter/: Cargo.toml
newsletter/posts/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  4.md  40.md  41.md  42.md  43.md  44.md  45.md  (+33 more)
newsletter/src/: main.rs
poster/: .env.example  Cargo.toml  posts.json
poster/src/: main.rs
scraper/commission-scraper/: Cargo.toml
scraper/commission-scraper/src/: main.rs
scraper/crawl/: Cargo.toml
scraper/crawl/src/: characters.rs  lib.rs  utils.rs
scraper/crawl/src/client/: mod.rs
scraper/data/sources/lobby/: lobbyregister.html
scraper/data/sources/remunerations/: Aelvoet-Magda-2018.html  Aelvoet-Magda-2019.html  Aelvoet-Magda-2020.html  Aelvoet-Magda-2021.html  Aelvoet-Magda-2022.html  Aelvoet-Magda-2023.html  Aerts-Staf-2018.html  Aerts-Staf-2019.html  (+1102 more)
scraper/plenary-scraper/: Cargo.toml
scraper/plenary-scraper/src/: main.rs
scraper/scrapers/: lobby.rs  members.rs  remunerations.rs  sessions.rs
summarizer/: .env.example  Cargo.toml
summarizer/src/: main.rs
web/: .gitignore  eleventy.config.js  justfile  package-lock.json  package.json  robots.txt
web/src/_config/: filters.js
web/src/_data/: commissions.js  commissions.json  dossiers.js  federalGovernment.json  functions.json  languages.js  lobby.js  lobbyists.json  meetings.js  members.js  metadata.js  parties.js  partyColors.json  propositions.js  questions.js  sectors.json  topics.json  votes.js
web/src/_includes/: footer.njk  head.njk  navbar.njk  question-details.njk  styles.njk
web/src/content/: about.njk  content.json  data.njk  dossier.njk  eleventy-redirect.njk  index.njk  lobby.njk  meeting-commission.njk  meeting-plenary.njk  meetings.njk  member.njk  members.njk  newsletter.njk  og-image.og.njk  parties.njk  party.njk  patterns.njk  propositions.njk  questions.njk  sitemap.njk  topic.njk  topics.njk  vote.njk  votes.njk
web/src/data/: commission_questions.parquet  commissions.parquet  dossiers.parquet  lobby.parquet  meetings.parquet  members.parquet  propositions.parquet  questions.parquet  remunerations.parquet  subdocuments.parquet  summaries.parquet  votes.parquet
web/src/metadata/: catalog.ttl
(+669 files in other folders)
