[package]
name = "newsletter"
version = "1.0.0"
edition = "2024"

[dependencies]
parquet = {  version = "57.1.0" , features = ["arrow"]}
arrow = "57.1.0"
arrow-array = "57.1.0"
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.41"

[[bin]]
name = "newsletter"
path = "src/main.rs"
