[package]
name = "poster"
version = "1.0.0"
edition = "2024"

[dependencies]
atrium-api = "0.25.3"
bsky-sdk = "0.1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parquet = {  version = "54.3.0" , features = ["arrow"]}
arrow = "54.3.0"
anyhow = "1.0.98"
sha2 = "0.10"
ipld-core = "0.4.2"
chrono = "0.4.41"
unicode-segmentation = "1.12.0"
dotenv = "0.15"
headless_chrome = "1.0.17"

[[bin]]
name = "poster"
path = "src/main.rs"