[package]
name = "summarizer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
arrow = "54.3.0"
parquet = {  version = "54.3.1" , features = ["arrow"]}
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"

[[bin]]
name = "summarizer"
path = "src/main.rs"