[package]
name = "commission-scraper"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
chrono = "0.4"
regex = "1"
crawl = { path = "../crawl" }
encoding_rs = "0.8.35"
parquet = "54.3.0"
arrow = "54.3.0"
serde_json = "1.0.140"
http = "1.0"

[[bin]]
name = "commission-scraper"
path = "src/main.rs"
