[package]
name = "plenary-scraper"
version = "1.0.0"
edition = "2024"

[dependencies]
scraper = "0.12"
tokio = { version = "1", features = ["full"] }
csv = "1.1"
chrono = "0.4"
regex = "1"
crawl = { path = "../crawl" }
headless_chrome = "1.0.17"
serde = { version = "1.0.218", features = ["derive"] }
encoding_rs = "0.8.35"
parquet = {  version = "54.3.0" , features = ["arrow"]}
arrow = "54.3.0"
serde_json = "1.0.140"
reqwest = "0.12.14"
itertools = "0.12"  # Use the latest available version
http = "1.0"

[[bin]]
name = "plenary-scraper"
path = "src/main.rs"

